[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oedisi"
version = "1.2.1"
description = "Orchestration interface for HELICS power simulations"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["oedisi", "gadal", "helics"]
authors = [{ name = "Joseph McKinsey", email = "joseph.mckinsey@nrel.gov" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "helics-apps>=3.2.1",
  "helics>=3.2.1",
  "pydantic>=1.7,<2",
  "psutil",
  "click",
  "pyyaml~=6.0",
]

[project.license]
text = "BSD 3-Clause"

[project.optional-dependencies]
test = [
  "black",
  "bump-my-version",
  "ipython",
  "ipdb",
  "gamspy",
  "memory_profiler",
  "mypy~=1.0",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "httpx",
  "fastapi~=0.104",
  "uvicorn",
  "grequests",
  "numpy",
  "pandas",
  "pyarrow",
]
metrics = ["pandas", "numpy", "pyarrow"]

[project.scripts]
oedisi = "oedisi.tools:cli"

# Setuptools configuration
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["oedisi", "oedisi.*"]

# Setuptools configuration
[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.sh"]

# Linter + formatter configuration
[tool.black]
line-length = 90

[tool.ruff]
line-length = 92
select = [
  "E",   # pycodestyle
  "TD",  # flake-8 todos
  "PD",  # pandas vet
  "RUF", # Ruff rules
  "N",   # pep8
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
#exclude = ["tests"]

# Assume Python 3.10.
target-version = "py38"

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
#"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.pydocstyle]
convention = "numpy"
